--- a/demo/demo-global.html
+++ b/demo/demo-global.html
@@ -35,9 +35,9 @@
             }, 2000);
 
 
-            console.log('Demo lib :', window['nq-jslib-base'].name);
+            console.log('Demo lib :', window['nq-tslib-base'].name);
 
-            const QuickApp = window['nq-jslib-base'];
+            const QuickApp = window['nq-tslib-base'];
             const quickApp1 = new QuickApp();
 
 
