--- a/test/browser/index.html
+++ b/test/browser/index.html
@@ -23,9 +23,9 @@
         // var libs = {
         //     'expect.js': expect,
         //     // js
-        //     '../src/index.js': window['nq-jslib-base']
+        //     '../src/index.js': window['nq-tslib-base']
         //     // ts
-        //     // '../src/index.ts': window['nq-jslib-base']
+        //     // '../src/index.ts': window['nq-tslib-base']
         // };
         // var require = function(path) {
         //     return libs[path];
