--- a/demo/demo-amd.html
+++ b/demo/demo-amd.html
@@ -1,87 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <title>Document</title>
 </head>
+
 <body>
+  <script src="../node_modules/es5-shim/es5-shim.js"></script>
+  <script src="../node_modules/es5-shim/es5-sham.js"></script>
 
-
-<div style="font-size: 28px;">
-    <br><br>
-    <span id="click1">点击打开快应用 文字无链接 </span> <br><br>
-    <a id="click2" href="#">点击打开快应用 a 标签 文字无链接</a> <br><br>
-
-    <a href="http://test.wkanx.com/tmp/build/index.html?newsId=46~3143995602845700">点击进入新闻页面 a 标签</a> <br><br>
-
-</div>
-
-
-
-    <script src="../node_modules/es5-shim/es5-shim.js"></script>
-    <script src="../node_modules/es5-shim/es5-sham.js"></script>
-
-    <script src="https://cdn.bootcss.com/zepto/1.2.0/zepto.min.js"></script>
-    <script src="https://cdn.bootcss.com/vConsole/3.3.2/vconsole.min.js"></script>
-
-    <script src='./js/require.js'></script>
-    <script>
-        requirejs(['../dist/index.aio.js'], function (QuickApp) {
-
-            $(document).ready(function () {
-
-                const vConsole = new VConsole();
-
-                setTimeout(function () {
-                    $( '.vc-switch' ).css( "bottom", "500px" );
-                }, 2000);
-
-
-                console.log('Demo lib :', QuickApp.name);
-                const quickApp1 = new QuickApp();
-
-
-                $('#click1').on('click', function () {
-                    quickApp1.open({
-                        path: '/Home',
-                        params: {
-                            path: 'Detail',
-                            title: '测试文章',
-                            url: 'http://test.wkanx.com/tmp/build/index.html',
-                            id: '3163241194045440',
-                            cid: 9999999,
-                            type: 0,
-                            template: 9999999,
-                            utm_source: 'push',
-                            pop: 0,
-                        },
-
-                    });
-
-                });
-
-                $('#click2').on('click', function () {
-                    quickApp1.open({
-                        path: '/Home',
-                        params: {
-                            path: 'Detail',
-                            title: '测试文章',
-                            url: 'http://test.wkanx.com/tmp/build/index.html',
-                            id: '3163241194045440',
-                            cid: 9999999,
-                            type: 0,
-                            template: 9999999,
-                            utm_source: 'push',
-                            pop: 0,
-                        },
-
-                    });
-
-                });
-
-            })
-
-        })
-    </script>
+  <script src='./js/require.js'></script>
+  <script>
+    requirejs(['../dist/nq-tslib-base.js'], function (nqTslibBase) {
+      document.write(nqTslibBase.add(1, 1))
+    })
+  </script>
 </body>
+
 </html>
