--- a/demo/demo-amd.html
+++ b/demo/demo-amd.html
@@ -12,8 +12,8 @@
 
   <script src='./js/require.js'></script>
   <script>
-    requirejs(['../dist/nq-tslib-base.js'], function (nqTslibBase) {
-      document.write(nqTslibBase.add(1, 1))
+    requirejs(['../dist/nq-jslib-base.js'], function (nqJslibBase) {
+      document.write(nqJslibBase.add(1, 1))
     })
   </script>
 </body>
