--- a/demo/demo-global.html
+++ b/demo/demo-global.html
@@ -10,9 +10,9 @@
   <script src="../node_modules/es5-shim/es5-shim.js"></script>
   <script src="../node_modules/es5-shim/es5-sham.js"></script>
 
-  <script src="../dist/nq-tslib-base.js"></script>
+  <script src="../dist/nq-jslib-base.js"></script>
   <script>
-    document.write(nqTslibBase.add(1, 1))
+    document.write(nqJslibBase.add(1, 1))
   </script>
 </body>
 
