--- a/test/browser/index.html
+++ b/test/browser/index.html
@@ -22,8 +22,7 @@
     <script>
         var libs = {
             'expect.js': expect,
-            // ts
-            '../src/index.ts': window['nqJslibBase']
+            '../src/index.js': window['nqJslibBase']
         };
         var require = function(path) {
             return libs[path];
